--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -41,5 +42,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->    
     <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
+
+    <!-- D3 implementation --> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.6.0/d3.min.js"></script>
+    
   </body>
 </html>
