--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <div class="footer">
-      Copyright &copy; 2020.
+      Copyright &copy; 2020. Alan Palomino
     </div>
   </body>
 
